<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.froad.cbank</groupId>
    <artifactId>froad-cbank-server</artifactId>
    <version>1.12.0-SNAPSHOT</version>
  </parent>
  <artifactId>froad-cbank-server-boss</artifactId>
  <name>Froad Cbank Server Boss</name>
  <dependencies>
		<!-- fraod-cbank-server-common -->
		<dependency>
			<groupId>com.froad.cbank</groupId>
			<artifactId>froad-cbank-server-common</artifactId>
		</dependency>
		<!-- fraod-cbank-server-boss-api -->
		<dependency>
			<groupId>com.froad.cbank</groupId>
			<artifactId>froad-cbank-server-boss-api</artifactId>
		</dependency>
	</dependencies>
	
	<build>
		<!--<finalName>
			froad_cbank_merchant
		</finalName>-->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<target>1.6</target>
						<source>1.6</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.4.3</version>
					<configuration>
						<testFailureIgnore>true</testFailureIgnore>
					</configuration>
				</plugin>
				<plugin>
					<inherited>true</inherited>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
					<!-- 把到common中mapper/*.xml打包到本模块中 -->
		            <executions>  
		                <execution>  
		                    <id>copy-xmls</id>  
		                    <phase>process-sources</phase>  
		                    <goals>  
		                        <goal>copy-resources</goal>  
		                    </goals>  
		                    <configuration>  
		                        <outputDirectory>${basedir}/target/classes</outputDirectory>  
		                        <resources>  
		                            <resource>  
		                                <directory>../froad-cbank-server-common/target/classes</directory>  
		                                <includes>  
		                                    <include>**/*.xml</include>  
		                                </includes>  
		                            </resource>  
		                        </resources>  
		                    </configuration>  
		                </execution>  
		            </executions>  
		        </plugin>
				<!-- 
				<plugin>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty-maven-plugin</artifactId>
					<version>7.1.0.RC1</version>
					<configuration>
						<scanIntervalSeconds>10</scanIntervalSeconds>
						<webAppConfig>
							<contextPath>/froad-cbank</contextPath>
						</webAppConfig>
					</configuration>
				</plugin>
				 -->
				 <!-- 选择性打包 -->
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<argLine>-Xms256M -Xmx1024M -XX:PermSize=512M
							-XX:MaxPermSize=1024M -Dfile.encoding=UTF-8</argLine>
						<inherited>false</inherited>
						<appendAssemblyId>false</appendAssemblyId>
						<descriptors>
							<descriptor>boss-server.xml</descriptor>
						</descriptors>
					</configuration>
					<executions>
						<execution>
							<id>make-assembly</id>
							<phase>package</phase>
							<goals>
								<goal>single</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<archive>
							<manifest>
								<mainClass>com.froad.thrift.BossMain</mainClass>
							</manifest>
						</archive>
					</configuration>
				</plugin>
				
			</plugins>
		</pluginManagement>
	</build>
	
</project>
